--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "discord.js-musicbot-addon": "^1.10.3",
     "math-expression-evaluator":"^1.2.17",
     "google-translate-api":"^2.3.0",
-    "discord-anti-spam":"^1.1.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-binaries": "^4.0.0",
     "express": "^4.16.3",
     "finalhandler": "^1.1.1",
     "fortnite": "^3.0.0",
