--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fs": "^0.0.2",
     "get-youtube-id": "^1.0.0",
     "discord-anti-spam": "^1.1.2",
-    "superagent": "^3.8.3",
+    "dateformat": "^3.0.3",
     "jimp": "^0.2.28",
     "moment": "^2.22.1",
     "ms": "^2.1.1",
